--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
     --bg:#010103;
     --border:.1rem solid rgba(255,255,255, .3);
     --bg-brown:#876445;
+    
 }
 
 * {
@@ -63,19 +64,31 @@ section {
 .btn {
     margin-top: 1rem;
     display: inline-block;
-    padding: .9rem 3rem;
+    padding: 0.9rem 3rem;
     font-size: 1.7rem;
-    color: #fff;
-    background: var(--main-color);
-    cursor: pointer;
+    color: #eee;
+    background: #000;
+    border-radius: 0.5rem;
+    transition: box-shadow 1s ease;
+    margin-top: 2.2rem;    
+}
+
+.btn.color {
+    background: transparent;
+    color: #d3ad7f;
+    border: 2px solid  #d3ad7f;
+
 }
 
 .btn:hover {
-    letter-spacing: .2rem;
+    background: transparent;
+    border: 2px solid #d3ad7f;
+    box-shadow: inset 280px 0 0 0 #d3ad7f;
+    color: #fff;
 }    
 
 .header {
-    background: var(--bg-brown);
+    background: transparent;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -93,7 +106,7 @@ section {
 .header .navbar a {
     margin: 0 1rem;
     font-size: 1.6rem;
-    color: #fff;
+    color: #1955ce;
 }
 
 .header .navbar a:hover {
