--- a/css/style.css
+++ b/css/style.css
@@ -1,581 +1,634 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap");
 
 :root {
-    --main-color:#1955ce;
-    --black:#13131a;
-    --bg:#010103;
-    --border:1px solid #1955ce;
-    --bg-green:#8ec640;
-    
+  --main-color: #1955ce;
+  --black: #13131a;
+  --bg: #010103;
+  --border: 1px solid #1955ce;
+  --bg-green: #8ec640;
 }
 
 * {
-    font-family: 'Roboto', sans-serif;
-    margin:0; padding: 0;
-    box-sizing: border-box;
-    outline: none; border: none;
-    text-decoration: none;
-    /* text-transform: capitalize; */
-    transition: .2s linear;
+  font-family: "Roboto", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  outline: none;
+  border: none;
+  text-decoration: none;
+  /* text-transform: capitalize; */
+  transition: 0.2s linear;
 }
 
 html {
-    font-size: 62.5%;
-    overflow-x: hidden;
-    scroll-padding-top: 9rem;
-    scroll-behavior: smooth;
+  font-size: 62.5%;
+  overflow-x: hidden;
+  scroll-padding-top: 9rem;
+  scroll-behavior: smooth;
 }
 
 html::-webkit-scrollbar {
-    width: .8rem;
+  width: 0.8rem;
 }
 
 html::-webkit-scrollbar-track {
-    background: transparent;
+  background: transparent;
 }
 
-
 html::-webkit-scrollbar-thumb {
-    background: #fff;
-    border-radius: 5rem;
+  background: #fff;
+  border-radius: 5rem;
 }
 
 body {
-    background: #fff;
+  background: #fff;
 }
 
 section {
-    padding: 2rem 7%;
+  padding: 2rem 7%;
 }
 
 .heading {
-    text-align: center;
-    color: var(--bg-green);
-    /* text-transform: uppercase; */
-    padding-bottom: 3.5rem;
-    font-size: 4rem;
+  text-align: center;
+  color: var(--bg-green);
+  /* text-transform: uppercase; */
+  padding-bottom: 3.5rem;
+  font-size: 4rem;
 }
 
 .heading span {
-    color: var(--main-color);
-    /* text-transform: uppercase; */
+  color: var(--main-color);
+  /* text-transform: uppercase; */
 }
 
 .btn {
-    margin-top: 1rem;
-    display: inline-block;
-    padding: 0.9rem 3rem;
-    font-size: 1.7rem;
-    color: #eee;
-    background: #000;
-    border-radius: 0.5rem;
-    transition: box-shadow 1s ease;
-    margin-top: 2.2rem;    
+  padding: 0.9rem 3rem;
+  background: var(--main-color);
+  color: #fff;
+  font-size: 1.8rem;
+  border-radius: 0.5rem;
+  margin-top: 2.2rem;
+  position: relative;
+  box-sizing: border-box;
+  border: 1px solid var(--main-color);
+  z-index: 0;
+  font-weight: 600;
+  transition: all 0.3s;
 }
 
-.btn.color {
-    background: transparent;
-    color: #1955ce;
-    border: 2px solid  #1955ce;
+.btn::before {
+  content: "";
+  position: absolute;
+  display: block;
+  top: 0;
+  left: -50px;
+  width: 70%;
+  height: 100%;
+  background: linear-gradient(90deg, transparent, #ffffff71, transparent);
+  transition: all 1s;
+  z-index: 1;
+  transform: translateX(-120px) skew(-20deg);
+}
 
+.btn:hover::before {
+  transform: translateX(300px) skew(-20deg);
 }
 
 .btn:hover {
+  background: var(--bg-green);
+  border: 1px solid var(--bg-green);
+}
+
+.btn1 {
+  display: inline-block; 
+  padding: 0.9rem 3rem;
+  background: var(--main-color);
+  color: #fff;
+  font-size: 1.8rem;
+  border-radius: 0.5rem;
+  margin-top: 2.2rem;
+  box-sizing: border-box;
+  border: 2px solid var(--main-color);
+  font-weight: 600;
+  transition: all 0.3s;
+}
+
+.btn1:hover {
     background: transparent;
-    border: 2px solid #1955ce;
-    box-shadow: inset 280px 0 0 0 #1955ce;
+    transition: all 0.5s;
+    border: 2px solid var(--main-color);    
     color: #fff;
-}    
+    font-size: 700;
+}
+
+.btn2 {
+    display: inline-block; 
+    padding: 0.9rem 3rem;
+    background: var(--main-color);
+    color: #fff;
+    font-size: 1.8rem;
+    border-radius: 0.5rem;
+    margin-top: 2.2rem;
+    box-sizing: border-box;
+    border: 2px solid var(--main-color);
+    font-weight: 600;
+    transition: all 0.3s;
+  }
+
+  .btn2:hover {
+    background: transparent;
+    transition: all 0.5s;
+    border: 2px solid var(--main-color);    
+    color: var(--main-color);
+    font-size: 700;
+}
+
+
 
 .header {
-    background: #fff;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 1.5rem 7%;
-    border-bottom: var(--border);
-    position: fixed;
-    top:0; left: 0; right: 0;
-    z-index: 1000;
+  background: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1.5rem 7%;
+  border-bottom: var(--border);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
 }
 
 .header .logo img {
-    height: 6rem;
+  height: 6rem;
 }
 
 .header .navbar a {
-    margin: 0 1rem;
-    font-size: 1.6rem;
-    color: #1955ce;
+  margin: 0 1rem;
+  font-size: 1.6rem;
+  color: #1955ce;
 }
 
 .header .navbar a:hover {
-    color: var(--main-color);
-    border-bottom: .1rem solid var(--main-color);
-    padding-bottom: .5rem;
+  color: var(--bg-green);
+  border-bottom: 0.1rem solid var(--bg-green);
+  padding-bottom: 0.5rem;
 }
 
 .header .icons div {
-    color:var(--bg-green);
-    cursor: pointer;
-    font-size: 2.5rem;
-    margin-left: 2rem;
+  color: var(--bg-green);
+  cursor: pointer;
+  font-size: 2.5rem;
+  margin-left: 2rem;
 }
 
 .header .icons div:hover {
-    color: var(--main-color);
+  color: var(--main-color);
 }
 
-.menu-btn {
-    display: none;
+#menu-btn {
+  display: none;
 }
 
 .header .search-form {
-    position: absolute;
-    top:115%; right: 7%;
-    background: #fff;
-    width: 50rem;
-    height: 5rem;
-    display: flex;
-    align-items: center;
-    transform: scaleY(0);
-    transform-origin: top;
+  position: absolute;
+  top: 115%;
+  right: 7%;
+  background: var(--bg-green);
+  width: 50rem;
+  height: 5rem;
+  display: flex;
+  align-items: center;
+  transform: scaleY(0);
+  transform-origin: top;
 }
 
 .header .search-form.active {
-    transform: scaleY(1);
+  transform: scaleY(1);
 }
 
 .header .search-form input {
-    height: 100%;
-    width: 100%;
-    font-size: 1.6rem;
-    color: var(--black);
-    padding: 1rem;
-    text-transform: none;
+  height: 100%;
+  width: 100%;
+  font-size: 1.6rem;
+  color: var(--black);
+  padding: 1rem;
+  text-transform: none;
 }
 
 .header .search-form label {
-    cursor: pointer;
-    font-size: 2.2rem;
-    margin-right: 1.5rem;
-    color: var(--black);
+  cursor: pointer;
+  font-size: 2.2rem;
+  margin-right: 1.5rem;
+  color: var(--black);
 }
 
 .header .search-form label:hover {
-    color: var(--main-color);
-} 
-
-.header .cart-items-container {
-    position: absolute;
-    top:100%; right: -100%;
-    height: calc(100vh -9.5rem);
-    width: 35rem;
-    background: #fff;
-    padding: 0 1.5rem;
+  color: var(--main-color);
 }
 
-.header .cart-items-container .active {
-    right: 0;
+.header .cart-items-container {
+  position: absolute;
+  top: 100%;
+  right: -100%;
+  height: calc(100vh);
+  width: 35rem;
+  background: #fff;
+  padding: 0 1.5rem;
+  box-shadow: 0 4px 14px hsl(355deg 25% 15% /10%);
+}
+
+.header .cart-items-container.active {
+  right: 0;
 }
 
 .header .cart-items-container .cart-item {
-    position: relative;
-    margin: 2rem 0;
-    display: flex;
-    align-items: center;
-    gap: 1.5rem;
+  position: relative;
+  margin: 2rem 0;
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
 }
 
 .header .cart-items-container .cart-item .fa-times {
-    position: absolute;
-    top:1rem; right: 1rem;
-    font-size: 2rem;
-    cursor: pointer;
-    color: var(--black);
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  font-size: 2rem;
+  cursor: pointer;
+  color: var(--black);
 }
 
 .header .cart-items-container .cart-item .fa-times:hover {
-    color: var(--main-color);
+  color: var(--main-color);
 }
 
 .header .cart-items-container .cart-item img {
-    height: 7rem;
+  height: 7rem;
 }
 
 .header .cart-items-container .cart-item .content h3 {
-    font-size: 2rem;
-    color: var(--black);
-    padding-bottom: .5rem;
+  font-size: 2rem;
+  color: var(--black);
+  padding-bottom: 0.5rem;
 }
 
 .header .cart-items-container .cart-item .content .price {
-    font-size: 1.5rem;
-    color: var(--main-color);
+  font-size: 1.5rem;
+  color: var(--main-color);
 }
 
 .header .cart-items-container .btn {
-    width: 100%;
-    text-align: center;
+  width: 100%;
+  text-align: center;
 }
 
 .home {
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    background: url(../assets2/banner1.jpg) no-repeat;
-    background-size: cover;
-    background-position: center;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  background: url(../assets2/banner1.jpg) no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 .home .content {
-    max-width: 60rem;
+  max-width: 60rem;
 }
 
 .home .content h3 {
-    font-size: 6rem;
-    text-transform: uppercase;
-    color: #fff;
+  font-size: 6rem;
+  text-transform: uppercase;
+  color: #fff;
 }
 
 .home .content p {
-    font-size: 2rem;
-    font-weight: lighter;
-    line-height: 1.8;
-    padding: 1rem 0;
-    color: #eee;
+  font-size: 2rem;
+  font-weight: lighter;
+  line-height: 1.8;
+  padding: 1rem 0;
+  color: #eee;
 }
 
 .about .row {
-    display: flex;
-    align-items: center;
-    background: var(--black);
-    flex-wrap: wrap;
+  display: flex;
+  align-items: center;
+  background: var(--black);
+  flex-wrap: wrap;
 }
 
 .about .row .image {
-    flex: 1 1 45rem;
+  flex: 1 1 45rem;
 }
 
-.about .row .image img{
-    width: 100%;
+.about .row .image img {
+  width: 100%;
 }
 .about .row .content {
-    flex: 1 1 45rem;
-    padding: 2rem;
+  flex: 1 1 45rem;
+  padding: 2rem;
 }
 
 .about .row .content h3 {
-    font-size: 3rem;
-    color: #fff;
-}    
+  font-size: 3rem;
+  color: #fff;
+}
 .about .row .content p {
-    font-size: 1.6rem;
-    color: #ccc;
-    padding: 1rem 0;
-    line-height: 1.8;
+  font-size: 1.6rem;
+  color: #ccc;
+  padding: 1rem 0;
+  line-height: 1.8;
 }
 
 .menu .box-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
-    gap:1.5rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  gap: 1.5rem;
 }
 
 .menu .box-container .box {
-    padding: 5rem;
-    text-align: center;
-    border: var(--border);
+  padding: 5rem;
+  text-align: center;
+  border: var(--border);
 }
 
 .menu .box-container .box img {
-    height: 10rem;
+  height: 10rem;
 }
 
 .icons {
-    color: #8ec640;
+  color: #8ec640;
 }
-
 
 .products .box-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
-    gap: 1.5rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  gap: 1.5rem;
 }
 
-
 .products .box-container .box {
-    text-align: center;
-    border: var(--border);
-    padding: 2rem;
+  text-align: center;
+  border: var(--border);
+  padding: 2rem;
 }
 
 .products .box-container .box .icons a {
-    height: 5rem;
-    width: 5rem;
-    line-height: 5rem;
-    font-size: 2rem;
-    border: var(--border);
-    color: var(--bg-brown);
-    margin: .3rem;
+  height: 5rem;
+  width: 5rem;
+  line-height: 5rem;
+  font-size: 2rem;
+  border: var(--border);
+  color: var(--bg-brown);
+  margin: 0.3rem;
 }
 
 .products .box-container .box .icons a:hover {
-    background: var(--main-color);
+  background: var(--main-color);
 }
 
 .products .box-container .box .image {
-    padding: 2.5rem 0;
+  padding: 2.5rem 0;
 }
 
 .products .box-container .box .image img {
-    height: 25rem;
+  height: 25rem;
 }
 
 .products .box-container .box .content h3 {
-    color: #fff;
-    font-size: 2.5 rem;
+  color: #fff;
+  font-size: 2.5 rem;
 }
 
 .products .box-container .box .content .stars {
-    padding: 1.5rem;
+  padding: 1.5rem;
 }
 
 .products .box-container .box .content .stars i {
-    font-size: 1.7rem;
-    color: var(--main-color);
+  font-size: 1.7rem;
+  color: var(--main-color);
 }
 
 .products .box-container .box .content .price {
-    color: var(--bg-brown);
-    font-size: 2.5rem;
+  color: var(--bg-brown);
+  font-size: 2.5rem;
 }
-    
+
 .products .box-container .box .content .price span {
-    text-decoration: line-through;
-    font-weight: lighter;
-    font-size: 1.5rem;
+  text-decoration: line-through;
+  font-weight: lighter;
+  font-size: 1.5rem;
 }
 
 /*  */
 
 .contact .row {
-    display: flex;
-    align-items: center;
-    background: var(--black);
-    flex-wrap: wrap;
-    gap: 1rem;
+  display: flex;
+  align-items: center;
+  background: var(--black);
+  flex-wrap: wrap;
+  gap: 1rem;
 }
 
-
 .contact .row .map {
-    flex: 1 1 45rem;
-    width: 100%;
-    object-fit: cover;
+  flex: 1 1 45rem;
+  width: 100%;
+  object-fit: cover;
 }
 
 .contact .row form {
-    flex: 1 1 45rem;
-    padding: 5rem 2rem;
-    text-align: center;
+  flex: 1 1 45rem;
+  padding: 5rem 2rem;
+  text-align: center;
 }
 
 .contact .row form h3 {
-    /* text-transform: uppercase; */
-    font-size: 3.5rem;
-    color: #fff;
+  /* text-transform: uppercase; */
+  font-size: 3.5rem;
+  color: #fff;
 }
 
 .contact .row form .inputBox {
-    display: flex;
-    align-items: center;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-    background: #fff;
-    border: var(--border);
+  display: flex;
+  align-items: center;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  background: #fff;
+  border: var(--border);
 }
 
 .contact .row .inputBox span {
-    color: var(--main-color);
-    font-size: 2rem;
-    padding-left: 2rem;
+  color: var(--main-color);
+  font-size: 2rem;
+  padding-left: 2rem;
 }
 
 .contact .row form .inputBox input {
-    width: 100%;
-    padding: 2rem;
-    font-size: 1.7rem;
-    color: var(--bg-brown);
-    text-transform: none;
-    background: none;
+  width: 100%;
+  padding: 2rem;
+  font-size: 1.7rem;
+  color: var(--bg-brown);
+  text-transform: none;
+  background: none;
 }
 
 .blogs .box-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
-    gap: 1.5rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  gap: 1.5rem;
 }
 
 .blogs .box-container .box {
-    border: var(--border);
+  border: var(--border);
 }
 
 .blogs .box-container .box .image {
-    height: 25rem;
-    overflow: hidden;
-    width: 100%;
+  height: 25rem;
+  overflow: hidden;
+  width: 100%;
 }
 
-.blogs .box-container .box .image
- img {
-    height: 100%;
-    object-fit: cover;
-    width: 100%;
- }
+.blogs .box-container .box .image img {
+  height: 100%;
+  object-fit: cover;
+  width: 100%;
+}
 
- .blogs .box-container .box:hover .image img{
-    transform: scale(1.2);
- }
+.blogs .box-container .box:hover .image img {
+  transform: scale(1.2);
+}
 
- .blogs .box-container .box .content {
-    padding: 2rem;
- }
+.blogs .box-container .box .content {
+  padding: 2rem;
+}
 
- .blogs .box-container .box .content .title {
-    font-size: 2.5rem;
-    line-height: 1.5rem;
-    color: var(--bg-brown);
- }
+.blogs .box-container .box .content .title {
+  font-size: 2.5rem;
+  line-height: 1.5rem;
+  color: var(--bg-brown);
+}
 
- .blogs .box-container .box .content .title:hover {
-    color: var(--main-color);
- }
+.blogs .box-container .box .content .title:hover {
+  color: var(--main-color);
+}
 
- .blogs .box-container .box .content span {
-    color: var(--main-color);
+.blogs .box-container .box .content span {
+  color: var(--main-color);
+  display: block;
+  padding-top: 1rem;
+  font-size: 2rem;
+}
+
+.blogs .box-container .box .content p {
+  font-size: 1.6rem;
+  line-height: 1.8;
+  color: #ccc;
+  padding: 1rem 0;
+}
+
+.footer {
+  background: var(--black);
+  text-align: center;
+}
+
+.footer .share {
+  padding: 1rem 0;
+}
+
+.footer .share a {
+  height: 5rem;
+  width: 5rem;
+  line-height: 5rem;
+  font-size: 2rem;
+  color: #fff;
+  border: var(--border);
+  margin: 0.3rem;
+  border-radius: 8%;
+}
+
+.footer .share a:hover {
+  background-color: var(--main-color);
+}
+
+.footer .links {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 2rem 0;
+  gap: 1rem;
+}
+
+.footer .links a {
+  padding: 0.7rem 2rem;
+  color: #fff;
+  border: var(--border);
+  font-size: 2rem;
+}
+
+.footer .links a:hover {
+  background: var(--main-color);
+}
+
+.footer .credit {
+  font-size: 2rem;
+  color: #fff;
+  font-weight: lighter;
+  padding: 1.5rem;
+}
+
+.footer .credit span {
+  color: var(--main-color);
+}
+
+/* media queries */
+
+@media (max-width: 768px) {
+  #menu-btn {
+    display: inline-block;
+  }
+
+  .header .navbar {
+    position: absolute;
+    top: 100%;
+    right: -100%;
+    background: #fff;
+    width: 30rem;
+    height: calc(100vh - 9.5rem);
+  }
+
+  .header .navbar.active {
+    right: 0;
+  }
+
+  .header .navbar a {
+    color: var(--black);
     display: block;
-    padding-top: 1rem;
+    margin: 1.5rem;
+    padding: 0.5rem;
     font-size: 2rem;
- }
+  }
 
- .blogs .box-container .box .content p {
-    font-size: 1.6rem;
-    line-height: 1.8;
-    color: #ccc;
-    padding: 1rem 0;
- }
+  .header .search-form {
+    width: 90%;
+    right: 2rem;
+  }
 
- .footer {
-    background: var(--black);
-    text-align: center;
- }
-
- .footer .share {
-    padding: 1rem 0;
- }
-
- .footer .share a {
-    height: 5rem;
-    width: 5rem;
-    line-height: 5rem;
-    font-size: 2rem;
-    color: #fff;
-    border: var(--border);
-    margin: .3rem;
-    border-radius: 8%;
-    
- }
-
- .footer .share a:hover {
-    background-color: var(--main-color);
- }
-
- .footer .links {
-    display: flex;
+  .home {
+    background-position: left;
     justify-content: center;
-    flex-wrap: wrap;
-    padding: 2rem 0;
-    gap: 1rem
- }
+    text-align: center;
+  }
 
- .footer .links a {
-    padding: .7rem 2rem;
-    color: #fff;
-    border: var(--border);
-    font-size: 2rem;
- }
+  .home .content h3 {
+    font-size: 4.5rem;
+  }
 
- .footer .links a:hover {
-    background: var(--main-color);
- }
-
- .footer .credit {
-    font-size: 2rem;
-    color: #fff;
-    font-weight: lighter;
-    padding: 1.5rem;
- }
-
- .footer .credit span {
-    color: var(--main-color);
- }
-
-
- /* media queries */
-
-
- @media (max-width:768px){
-
-    #menu-btn{
-        display: inline-block;
-    }
-
-    .header .navbar{
-        position: absolute;
-        top:100%; right: -100%;
-        background: #fff;
-        width: 30rem;
-        height: calc(100vh - 9.5rem);
-    }
-
-    .header .navbar.active{
-        right:0;
-    }
-
-    .header .navbar a{
-        color:var(--black);
-        display: block;
-        margin:1.5rem;
-        padding:.5rem;
-        font-size: 2rem;
-    }
-
-    .header .search-form{
-        width: 90%;
-        right: 2rem;
-    }
-
-    .home{
-        background-position: left;
-        justify-content: center;
-        text-align: center;
-    }
-
-    .home .content h3{
-        font-size: 4.5rem;
-    }
-
-    .home .content p{
-        font-size: 1.5rem;
-    }
-
+  .home .content p {
+    font-size: 1.5rem;
+  }
 }
 
-@media (max-width:450px){
-
-    html{
-        font-size: 50%;
-    }
-
+@media (max-width: 450px) {
+  html {
+    font-size: 50%;
+  }
 }
- 
